workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:35:49 **** Incremental Build of configuration Debug for project BB2 ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\Sanket Nayak/wpilib/cpp/current/include" "-I\\\\VMWARE-HOST\\Shared Folders\\Desktop\\2018FRC\\workspace\\BB2\\src" "-IC:\\Users\\Sanket Nayak/wpilib/user/cpp/include" -O0 -Og -g3 -Wall -c -fmessage-length=0 -pthread -o "src\\Robot.o" "..\\src\\Robot.cpp" 
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\Sanket Nayak/wpilib/cpp/current/include" "-I\\\\VMWARE-HOST\\Shared Folders\\Desktop\\2018FRC\\workspace\\BB2\\src" "-IC:\\Users\\Sanket Nayak/wpilib/user/cpp/include" -O0 -Og -g3 -Wall -c -fmessage-length=0 -pthread -o "src\\Subsystems\\Drive.o" "..\\src\\Subsystems\\Drive.cpp" 
..\src\Subsystems\Drive.cpp: In constructor 'Drive::Drive::Drive()':
..\src\Subsystems\Drive.cpp:31:22: warning: unused variable 'drivetrain' [-Wunused-variable]
   DifferentialDrive *drivetrain = new DifferentialDrive(leftDrive, rightDrive);
                      ^
..\src\Subsystems\Drive.cpp: In member function 'double Drive::Drive::ScaleVal(double, double)':
..\src\Subsystems\Drive.cpp:42:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
..\src\Subsystems\Drive.cpp: At global scope:
..\src\Subsystems\Drive.cpp:42:1: error: expected '}' at end of input
